// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModelUpload /> should render properly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  color: #6088FE;
  font-weight: 500;
  font-size: 17px;
  line-height: 20px;
  padding: 64px;
  padding-left: 84px;
  padding-right: 84px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-style: dashed;
  border-color: #808080;
  border-width: 1px;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  display: inline;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  padding: 0;
  font-weight: inherit;
  font-size: inherit;
}

.emotion-2,
.emotion-2:hover,
.emotion-2:visited,
.emotion-2 .noop {
  color: #6088FE;
}

.emotion-2:hover,
.emotion-2 .noop {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  className="emotion-0"
>
  <input
    onChange={[Function]}
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    type="file"
  />
  <div
    aria-label="Drag and Drop Zone"
    className="emotion-1"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <div>
      Drag and drop file here or
       
      <button
        className="emotion-2"
        onClick={[Function]}
        type="button"
      >
        click to upload
      </button>
    </div>
  </div>
</div>
`;

exports[`<ModelUpload /> should render properly 2`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  color: #3A5DFF;
  font-weight: 500;
  font-size: 17px;
  line-height: 20px;
  padding: 64px;
  padding-left: 84px;
  padding-right: 84px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #92a5ff;
  border-style: solid;
  border-color: #3A5DFF;
  border-width: 2px;
}

<div
  className="emotion-0"
>
  <input
    onChange={[Function]}
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    type="file"
  />
  <div
    aria-label="Drag and Drop Zone"
    className="emotion-1"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    Drop file to upload
  </div>
</div>
`;

exports[`<ModelUpload /> should render properly 3`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-1 {
  color: #b3b3b3;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 16px;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 17px;
  line-height: 20px;
  padding-bottom: 4px;
}

.emotion-5 {
  color: #808080;
  font-family: Roboto Condensed;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-6 button,
.emotion-6 a {
  margin-right: 16px;
}

.emotion-6 button:last-child,
.emotion-6 a:last-child {
  margin-right: 0;
}

.emotion-7 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-7,
.emotion-7:hover,
.emotion-7:visited,
.emotion-7 .noop {
  background-color: #808080;
}

.emotion-7:hover,
.emotion-7 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-7[aria-disabled=true],
.emotion-7 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-8 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-8,
.emotion-8:hover,
.emotion-8:visited,
.emotion-8 .noop {
  background-color: #3A5DFF;
}

.emotion-8:hover,
.emotion-8 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-8[aria-disabled=true],
.emotion-8 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<form
  action=""
  className="emotion-0"
  method="post"
  onSubmit={[Function]}
>
  <div
    className="emotion-1"
  >
    Do you want to upload this file?
  </div>
  <div
    className="emotion-2"
  >
    <svg
      data-file-name="file.svg"
      height={33}
    />
    <div
      className="emotion-3"
    >
      <div
        className="emotion-4"
      >
        model.zip
      </div>
      <div
        className="emotion-5"
      >
        117.7 MB
      </div>
    </div>
  </div>
  <div
    className="emotion-6"
  >
    <button
      className="emotion-7"
      onClick={[Function]}
      type="button"
    >
      Cancel
    </button>
    <button
      className="emotion-8"
      onClick={[Function]}
      type="submit"
    >
      Upload Model File
    </button>
  </div>
</form>
`;

exports[`<ModelUpload /> should render properly 4`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-1 {
  color: #b3b3b3;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 16px;
  padding-bottom: 24px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 16px;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 17px;
  line-height: 20px;
  padding-bottom: 4px;
}

.emotion-5 {
  color: #808080;
  font-family: Roboto Condensed;
}

.emotion-6 {
  padding-bottom: 16px;
}

.emotion-7 {
  width: 500px;
  height: 16px;
  border-radius: 14px;
  background-color: #4a4a4a;
  overflow: hidden;
}

.emotion-8 {
  width: 0;
  height: 16px;
  background-color: #009f22;
  -webkit-transition: width 1s;
  transition: width 1s;
}

.emotion-9 {
  color: #009f22;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Roboto Condensed;
  padding-top: 8px;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-10 button,
.emotion-10 a {
  margin-right: 16px;
}

.emotion-10 button:last-child,
.emotion-10 a:last-child {
  margin-right: 0;
}

.emotion-11 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-11,
.emotion-11:hover,
.emotion-11:visited,
.emotion-11 .noop {
  background-color: #808080;
}

.emotion-11:hover,
.emotion-11 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-11[aria-disabled=true],
.emotion-11 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<form
  action=""
  className="emotion-0"
  method="post"
  onSubmit={[Function]}
>
  <div
    className="emotion-1"
  >
    Uploading:
  </div>
  <div
    className="emotion-2"
  >
    <svg
      data-file-name="file.svg"
      height={33}
    />
    <div
      className="emotion-3"
    >
      <div
        className="emotion-4"
      >
        model.zip
      </div>
      <div
        className="emotion-5"
      >
        117.7 MB
      </div>
    </div>
  </div>
  <div
    className="emotion-6"
  >
    <div
      className="emotion-7"
    >
      <div
        className="emotion-8"
      />
    </div>
    <div
      className="emotion-9"
    >
      0
      % Complete
    </div>
  </div>
  <div
    className="emotion-10"
  >
    <button
      className="emotion-11"
      onClick={[Function]}
      type="button"
    >
      Cancel
    </button>
  </div>
</form>
`;
